--- a/README.adoc
+++ b/README.adoc
@@ -390,28 +390,28 @@ a|
 ----
 {
   "someStaticField" : "static",
-  "id" : "dd817db0-41db-4f9b-ab1e-86768337ffef",
-  "someOneOf" : "B1",
-  "fullName" : "Argentina Kirlin",
-  "firstName" : "Meagan",
-  "lastName" : "Anderson",
-  "gender" : "Bigender",
-  "address" : "Apt. 826 726 Larry Haven, Myraburgh, MI 72998",
-  "streetAddress" : "26619 Hoppe Run",
-  "state" : "South Dakota",
-  "timeZone" : "America/New_York",
-  "city" : "Kesslerton",
-  "creditCardType" : "mastercard",
+  "id" : "776706b2-683e-4a37-9028-2db39fdfe714",
+  "someOneOf" : "AX",
+  "fullName" : "Quiana Upton",
+  "firstName" : "Kristopher",
+  "lastName" : "Leannon",
+  "gender" : "NonBinary",
+  "address" : "Suite 035 875 Buddy Underpass, South Lorenton, MN 84834",
+  "streetAddress" : "84565 Welch Ford",
+  "state" : "Nevada",
+  "timeZone" : "America/Mexico_City",
+  "city" : "South Wynellside",
+  "creditCardType" : "jcb",
   "creditCardNumber" : "1211-1221-1234-2201",
   "creditCardExpiry" : "2011-10-12",
-  "title" : "Vile Bodies",
-  "author" : "Francesco Lebsack",
-  "genre" : "Short story",
-  "publisher" : "Airiti Press",
-  "blend" : "Red Been",
-  "color" : "ivory",
-  "hexColor" : "#B9FBDB",
-  "bloodGroup" : "O+"
+  "title" : "In Dubious Battle",
+  "author" : "Arden Wiza",
+  "genre" : "Suspense/Thriller",
+  "publisher" : "HarperPrism",
+  "blend" : "Thanksgiving Blend",
+  "color" : "lavender",
+  "hexColor" : "#30456D",
+  "bloodGroup" : "AB-"
 }
 
 ----
