--- a/README.adoc
+++ b/README.adoc
@@ -72,6 +72,25 @@ a|
 ----
 |===
 
+== Usage
+
+----
+Generator<String, String> generator = GeneratorFactory.getDefaultGenerator();
+String generated = generator.generate(inputJson);
+----
+
+See the `JsonToJsonGeneratorTest` class for other canonical ways to invoke the Json generator.
+
+Run FullSpecTest to see randomized output for an input with all supported fields and spec.
+
+This project depends on the `net.datafaker:datafaker` library. That library generates fake data, similar to the javascript `faker.js` library or the python `faker` package.
+
+The default language supported for this library is `en`, and the default region is `US`.
+
+This library can be used in situations where you may want to randomize the data being used across test runs. For example, given a sample, this library can keep generating different data across each run, which can help with better tests for your system.
+
+NOTE: While the library tries to generate pseudo random data, it is possible it can generate some data that is not fake. Exercise caution around its usage.
+
 === Customization
 You may choose to provide a generator specification that informs the library regarding certain aspects of how to generate the Json.
 
@@ -249,24 +268,7 @@ a|
 ----
 |===
 
-== Usage
-
-----
-Generator<String, String> generator = GeneratorFactory.getDefaultGenerator();
-String generated = generator.generate(inputJson);
-----
-
-See the `JsonToJsonGeneratorTest` class for other canonical ways to invoke the random Json generator.
-
-Run FullSpecTest to see randomized output for an input with all supported fields and spec.
-
-This project depends on the `net.datafaker:datafaker` library. That library generates fake data, similar to the javascript `faker.js` library or the python `faker` package.
-
-The default language supported for this library is `en`, and the default region is `US`.
-
-This library can be used in situations where you may want to randomize the data being used across test runs. For example, given a sample, this library can keep generating different data across each run, which can help with better performance test of your system.
-
-NOTE: While the library tries to generate random data, it is possible it can randomly generate some data that is not fake. Exercise caution around its usage.
+Read about generators here:
 
 == Performance
 
